--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ MONGODB_URI = 'mongodb+srv://priscripto225:shitij-123@cluster0.z0lsi.mongodb.net
 CLOUDINARY_NAME = 'di305jpff'
 CLOUDINARY_API_KEY = '657612551983122'
 CLOUDINARY_SECRET_KEY = 'LMYnFB6XTeRIjz7WgOT8LzTuqSw'
+ADMIN_EMAIL = "admin@gmail.com"
+ADMIN_PASSWORD = "admin2025"
+JWT_SECRET = "PRISCRIPTO"
